RESOLVED FIXED170596
[GTK] Fix ASSERT about missing codecs in OWR
https://bugs.webkit.org/show_bug.cgi?id=170596
Summary [GTK] Fix ASSERT about missing codecs in OWR
Xan Lopez
Reported 2017-04-07 04:14:35 PDT
This should make debugging for missing codecs a bit easier for developers.
Attachments
Add message to ASSERT about missing codec (2.24 KB, patch)
2017-04-07 04:15 PDT, Xan Lopez
no flags
Also fix the codec name, this was actually subtly broken. (2.29 KB, patch)
2017-04-07 06:17 PDT, Xan Lopez
no flags
Xan Lopez
Comment 1 2017-04-07 04:15:44 PDT
Created attachment 306486 [details] Add message to ASSERT about missing codec
WebKit Commit Bot
Comment 2 2017-04-07 05:01:03 PDT
Comment on attachment 306486 [details] Add message to ASSERT about missing codec Clearing flags on attachment: 306486 Committed r215090: <http://trac.webkit.org/changeset/215090>
WebKit Commit Bot
Comment 3 2017-04-07 05:01:04 PDT
All reviewed patches have been landed. Closing bug.
Xan Lopez
Comment 4 2017-04-07 06:17:42 PDT
Created attachment 306492 [details] Also fix the codec name, this was actually subtly broken.
Note You need to log in before you can comment on or make changes to this bug.