[GTK] Add message about missing codecs to ASSERT in OWR https://bugs.webkit.org/show_bug.cgi?id=170596

Patch by Xan Lopez <xan@igalia.com> on 2017-04-07
Reviewed by Carlos Garcia Campos.

* platform/mediastream/openwebrtc/MediaEndpointOwr.cpp:
(WebCore::MediaEndpointOwr::prepareMediaSession): add a message
about the missing coded to the ASSERT.

Canonical link: https://commits.webkit.org/187519@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@215090 268f45cc-cd09-0410-ab3c-d52691b4dbfc